# six-birds-no-go

./: .gitignore  .package-repo-snapshot.json  Makefile  README.md  pyproject.toml  vision.md
assets/: zenodo_related_works.csv
configs/: assumptions.yaml  primitives.yaml  proxies.yaml  theorems.yaml  witnesses.yaml
lean/: SixBirdsNoGo.lean  lake-manifest.json  lakefile.lean
paper/: macros.tex  main.blg  main.fdb_latexmk  main.fls  main.tex  refs.bib
scripts/: run_r12_bibliography_citations.py  run_r13_math_paper_validator.py  run_r14_math_paper_red_team_review.py  run_r15_finalize_and_bundle.py  run_r16_citation_enrichment.py  run_t08_arrow_suite.py  run_t09_closure_suite.py  run_t10_objecthood_suite.py  run_t11_definability_suite.py  run_t12_witness_manifest.py  run_t13_master_witness_suite.py  run_t14_primitive_matrix.py  run_t15_robustness_suite.py  run_t19_repro_pipeline.py  run_t20_readiness_checkpoint.py  run_t21_theorem_atlas.py  run_t22_dpi_protocol_pack.py  run_t23_graph_affinity_pack.py  run_t24_closure_pack.py  run_t25_objecthood_pack.py  run_t26_bounded_interface_pack.py  run_t27_lean_graph_bridge.py  run_t28_lean_finite_lens_count.py  run_t29_lean_bounded_interface_corollary.py  run_t30_lean_objecthood_uniqueness.py  run_t35_scope_charter.py  run_t36_lean_probability_core.py  run_t37_lean_kl_dpi_core.py  run_t38_lean_arrow_dpi.py  run_t39_lean_protocol_trap.py  run_t40_closure_feasibility.py  run_t41_lean_closure_variational_core.py  run_t42_lean_closure_direct_pack.py  run_t43_objecthood_tv_feasibility.py  run_t44_lean_objecthood_direct_pack.py  (+2 more)
(+313 files in other folders)
